# databricks-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
src/config/: config.py  config_gold.py  configure_environment.py
src/processing/bronze/: ingest_bronze.py  ingest_data.py
src/processing/gold/: ingest_customer_gold.py  ingest_orders_gold.py  ingest_sales_gold.py
src/processing/silver/: enrich_data.py  ingest_silver.py
src/runscripts/bronze/: ingest_bronze.py  ingest_data.py
src/runscripts/gold/: ingest_customer_gold.py  ingest_orders_gold.py  ingest_sales_gold.py
src/runscripts/silver/: enrich_data.py  ingest_silver.py
src/utils/: logger.py  utils_functions.py
tests/: conftest.py  test_utils.py
